# VAL-wrapper

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build_test.yml  codeql-analysis.yml  macos_build_test.yml  macos_pypi_publish.yml  pypi_publish.yml  testpypi_publish.yml  ubuntu_build_test.yml  ubuntu_pypi_publish.yml  windows_build_test.yml  windows_pypi_publish.yml
config/pypi/: README.md  setup.py
config/toolchain/: toochain_linux.cmake  toolchain_macos.cmake  toolchain_mingw_i686.cmake  toolchain_mingw_x86_64.cmake
scripts/: validate.py
src/: wrapper.py
tests/: test_run_validate.py
